force-app/main/default/objects/Student__c/fields/Additional_Activities__c.field-meta.xml
<CustomField>
    <fullName>Additional_Activities__c</fullName>
    <label>Additional Activities</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Sports</fullName>
            </value>
            <value>
                <fullName>Music</fullName>
            </value>
            <value>
                <fullName>In House Training</fullName>
            </value>
            <value>
                <fullName>Dance</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>