force-app/main/default/objects/Student__c/fields/City__c.field-meta.xml
<CustomField>
    <fullName>City__c</fullName>
    <label>City</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <controllingField>Country__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>California</fullName>
            </value>
            <value>
                <fullName>Chennai</fullName>
            </value>
            <value>
                <fullName>Delhi</fullName>
            </value>
            <value>
                <fullName>Glasgow</fullName>
            </value>
            <value>
                <fullName>Indiana</fullName>
            </value>
            <value>
                <fullName>Islamabad</fullName>
            </value>
            <value>
                <fullName>Karachi</fullName>
            </value>
            <value>
                <fullName>Kolkata</fullName>
            </value>
            <value>
                <fullName>London</fullName>
            </value>
            <value>
                <fullName>Melbourne</fullName>
            </value>
            <value>
                <fullName>Mumbai</fullName>
            </value>
            <value>
                <fullName>Reading</fullName>
            </value>
            <value>
                <fullName>Sydney</fullName>
            </value>
            <value>
                <fullName>Toronto</fullName>
            </value>
            <value>
                <fullName>Dhaka</fullName>
            </value>
            <value>
                <fullName>Teheran</fullName>
            </value>
            <value>
                <fullName>Baghdad</fullName>
            </value>
            <value>
                <fullName>Colombo</fullName>
            </value>
            <value>
                <fullName>Wellington</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>