force-app/main/default/objects/Student__c/fields/Registration_Number__c.field-meta.xml
<CustomField>
    <fullName>Registration_Number__c</fullName>
    <label>Registration Number</label>
    <length>25</length>
    <required>true</required>
    <type>Text</type>
</CustomField>