force-app/main/default/objects/Student__c/listViews/Test.listView-meta.xml
<ListView>
    <fullName>Test</fullName>
    <columns>NAME</columns>
    <columns>Active__c</columns>
    <columns>My_Teacher__c</columns>
    <filterScope>Everything</filterScope>
    <label>Test</label>
</ListView>